# hlsdk-opfor

.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/su/xash/opfor/: ExtractAssets.java  InstallReceiver.java  LauncherActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
vgui_dll/: CMakeLists.txt
vgui_dll/lib-src/vgui/: App.cpp
